--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Record and save audio</title>
-    <style>
-      audio {
-        display: block;
-        margin: 5px;
-      }
-    </style>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>Consonance Call</title>
   </head>
   <body>
+    <div id="buttons">
     <button id="record">Record</button>
     <button id="stop" disabled>Stop</button>
     <button id="play" disabled>Play</button>
     <button id="save" disabled>Save</button>
-
+  </div>
     <div id="saved-audio-messages">
       <h2>Saved messages</h2>
     </div>
